# nfts

./: .dockerignore  .env_template  .flake8  .gitignore  Dockerfile.local  Makefile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
app/: main.py  settings.py
app/core/: database.py  fill_countries.py  middleware.py  router_register.py
app/helpers/: exception_handlers.py  exceptions.py  fill_countries.py  fill_industries.py  jwt.py  mail.py  messages.py  middlewares.py  oauth.py  pinata.py  response.py  router_register.py
app/routers/auth/: crud.py  models.py  routes.py  schemas.py  utils.py
app/routers/auth/tests/: factory.py  test.py
app/routers/common/: crud.py  models.py  routes.py  schemas.py
app/routers/common/tests/: factory.py  test.py
app/routers/companies/: crud.py  models.py  routes.py  schemas.py
app/routers/companies/tests/: factory.py  test.py
app/routers/users/: models.py  routes.py
app/routers/users/tests/: factory.py
app/templates/: congrats.html  forgot.html  verify.html  verify_member.html
app/templates/static/: industries.json
migrations/: env.py  hooks.py
migrations/versions/: 00001_.py  00002_.py  00003_.py  00004_.py  00005_.py  00006_.py  00007_.py  00008_.py  00009_.py  00010_.py  00011_.py  00012_.py
