[tool.poetry]
name = "nft"
version = "0.1.0"
description = ""
authors = ["Nft"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
cachecontrol = "^0.12.7"
certifi = "^2022.12.7"
requests = "^2.29.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.41"
pyjwt = "^2.10.1"
fastapi-mail = "^1.5.0"
redis = "^6.2.0"
fastapi = "^0.115.12"
python-dotenv = "^1.1.0"
asyncpg = "^0.30.0"
uvicorn = "^0.34.3"
psycopg2-binary = "^2.9.10"
oauthlib = "^3.2.2"
pydantic = {extras = ["email"], version = "^2.11.5"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.0"
alembic = "^1.16.1"
pytest-mock = "^3.14.1"
factory-boy = "^3.3.3"

[tool.isort]
extend_skip = ["migrations"]

[tool.black]
extend_exclude = "migrations"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
